Support for .. in range

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {},
   "license": "MIT",
   "peerDependencies": {
-    "acos-jsvee": "^0.1.0",
-    "acos-jsvee-python": "^0.1.0",
-    "acos-kelmu": "^0.1.0"
+    "acos-jsvee": "~0.2.0",
+    "acos-jsvee-python": "~0.2.0",
+    "acos-kelmu": "~0.1.0"
   },
   "dependencies": {
     "python-shell": "0.0.3"
